; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_misc.c_release_and_free_resource.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_misc.c_release_and_free_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @release_and_free_resource(%struct.resource* %0) #0 {
  %2 = alloca %struct.resource*, align 8
  store %struct.resource* %0, %struct.resource** %2, align 8
  %3 = load %struct.resource*, %struct.resource** %2, align 8
  %4 = icmp ne %struct.resource* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.resource*, %struct.resource** %2, align 8
  %7 = call i32 @release_resource(%struct.resource* %6)
  %8 = load %struct.resource*, %struct.resource** %2, align 8
  %9 = call i32 @kfree(%struct.resource* %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @release_resource(%struct.resource*) #1

declare dso_local i32 @kfree(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
